src/test/deca/syntax/valid/homemade/parser/test/test_pars_val_class_vide.deca
// Description:
//    Programme minimaliste testant l'arbre d'instruction pour une class vide
//
// Resultats:
//    
//
// Historique:
//    cree le 01/01/2023

class iden {
    
}