src/test/deca/syntax/invalid/homemade/parser/test/test_pars_inv_instruction_primary_readfloat_oubli_maj.deca
// Description:
//    tests de programme incorrect syntaxiquement pour une primary
//
// Resultats:
//    Ligne 13 : Erreur (readFloat)
//    
//
// Historique:
//    cree le 04/01/2023

{
    readfloat();
}
